1)Apple access scope to system level 2)Revise controller authorization check
